# PingPongFinder

./: CNAME  README.md  acoustics.html  index.html  install_instructions.md  navigation.html  obs-avoidance.html  state-machine.html
assets/css/: main.css
obstacle_avoidance/: package.xml
obstacle_avoidance/src/: obstacle_avoidance.py
pong_driver/: CMakeLists.txt  package.xml
pong_driver/msg/: DriveCmd.msg
pong_driver/src/: pong_driver.py  pong_driver_node.py  pong_master.py  unicycle_control.py
soundsim/: get_src.py  loc_pub.py  room_from_rt60.py  room_sim.py
soundsim/msg/: AcousticStatus.msg
soundsim2/: CMakeLists.txt  package.xml
soundsim2/msg/: AcousticStatus.msg
soundsim2/src/: intersections.py  loc_plot.py  loc_pub.py  room_sim.py
soundsim2/src/archived/: predict_src.py  room.py  simdata.csv  simdata2.csv
worlds/: CMakeLists.txt  package.xml
worlds/launch/: amcl_diff.launch  control_task_env.launch  our_demo.launch  stdr_maze_env.launch  stdr_maze_obs.launch
worlds/msg/: TFCmd.msg
worlds/robots/: simple_robot.yaml
worlds/src/: odom_tf_publisher.py  tf_publisher.py  unicycle_control.py
worlds/src/AStar/: a_star.py  model_predictive_speed_and_steer_control.py  path_finding_test.py  test.py
worlds/srv/: MapAndEndpts.srv
